# dns-over-tls-proxy

./: LICENSE  README.md  docker-compose.yml  setup.sh
dns-proxy/: .gitignore  Cargo.toml  Dockerfile
dns-proxy/src/: cache.rs  logger.rs  main.rs  server.rs  tcp_server.rs
dns-proxy/src/dns/: dname.rs  header.rs  message.rs  mod.rs  question.rs  record.rs
test-infra/certificates/: ca.crt  ca.key  ca.srl  extfile.txt  make-certs.sh  server.crt  server.csr  server.key
test-infra/server/: Corefile  Dockerfile  README.md  hosts.txt  plugin.cfg  random-ip-list  random-list.sh
